i removed as not needed for circles.

--- a/Labs/Lab01/01_hw_SVG_scatter_brown.html
+++ b/Labs/Lab01/01_hw_SVG_scatter_brown.html
@@ -44,7 +44,7 @@
                 .data(dataset)
                 .enter()
                 .append("circle")
-                .attr("cx", (d,i) => d[0]) //(a required circle value, and a function of what it returns)  // Hint: we want to return d[] with the x value of the array
+                .attr("cx", (d) => d[0]) //(a required circle value, and a function of what it returns)  // Hint: we want to return d[] with the x value of the array
                 .attr("cy", d=> svgHeight - d[1]) //(a required circle value, and a function of what it returns)  // Hint: we want to return d[] with the y value of the array 
                 .attr("r", 10) //(another required circle value, and a number: try 10)
                 .attr("fill", "magenta"); //optional: change the color of the circles 
@@ -57,7 +57,7 @@
                 .enter()
                 .append("text")
                 .text(d => d) //we want the text to return the data values
-                .attr("x", (d,i) => (d[0] + 10)) //we want to give the text an x value, use what you used above, mind the difference between circle text properties 
+                .attr("x", (d) => (d[0] + 10)) //we want to give the text an x value, use what you used above, mind the difference between circle text properties 
                 .attr("y", d=> svgHeight - d[1]) //we want to give the text a y value, use what you used above, mind the difference between circle text properties 
                 .attr("font-size", "12px")
                 .attr("font-color", "black");
