removed i and added ;

--- a/Labs/Lab01/01_hw_SVG_scatter_brown.html
+++ b/Labs/Lab01/01_hw_SVG_scatter_brown.html
@@ -13,7 +13,7 @@
         <script type="text/javascript">
             //1. Declare SVG width and height in pixels (remember the ; after declaring variables!)
             const svgWidth = 600;
-            const svgHeight = 600
+            const svgHeight = 600;
 
             /*2. Use this dataset for our scatterplot -- nothing to do here. 
             But feel free to play with the dataset if you prefer (optional). These are just random numbers.
